variables.Variables.scala.error
Erreur de compilation :
Variables:3: error: not found: value nbpas
  nbpas=nbpas + 1
  ^